# swift

lib/: CMakeLists.txt
lib/swiftFramework/: CMakeLists.txt  driver.cpp
tools/: CMakeLists.txt
tools/swiftFrameworkRunner/: CMakeLists.txt  driver.cpp
utils/: build-presets.ini
